--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <body>
         <div class="row">
             <div class="col-md-2">
-                <button type="button" id="toggleNotifs" class="btn btn-default">Notifications Off</button>
+                <button type="button" id="toggleNotifs" class="btn btn-default" data-toggle="button" aria-pressed="true">Notifications On</button>
             </div>
             <div class="col-md-2 col-md-offset-3">
                 <form id="nameForm" action="">
@@ -93,10 +93,10 @@
 
             $('#toggleNotifs').click(function() {
                 if (notifsOn) {
-                    $('#toggleNotifs').html('Notifications On');
+                    $('#toggleNotifs').html('Notifications Off');
                     notifsOn = false;
                 } else {
-                    $('#toggleNotifs').html('Notifications Off');
+                    $('#toggleNotifs').html('Notifications On');
                     notifsOn = true;
                 }
             });
