Fixed Focus Border

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 overflow-x: hidden;
                 word-wrap: break-word;
             }
-            .btn:focus {
+            .btn:focus, .btn:enabled {
                 outline: none;
             }
         </style>
